<resources>

    <string name="ic_launcher_path" translatable="false">M3 3C12 13 16 12 13 1M21 3C12 12 4 -7 13 21</string>

    <string name="title_sections">Секции</string>
    <string name="title_groups">Группы</string>
    <string name="title_teachers">Преподаватели</string>
    <string name="title_masters">Руководители</string>
    <string name="title_developers">Разработчики</string>
    <string name="title_bots">Боты</string>
    <string name="title_students">Ученики</string>
    <string name="title_about">О приложении</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_students_in_group" formatted="true">Ученики в %s</string>
    <string name="title_lessons_in_group" formatted="true">Занятия в %s</string>
    <string name="title_login">Вход</string>
    <string name="title_cabinet">Кабинет</string>
    <string name="title_lesson_in_group_default">Занятия</string>
    <string name="title_lesson_details_default">Занятие</string>
    <string name="title_payments_in_group_default">Платежи</string>
    <string name="title_payments_in_group_format" formatted="true">Платежи в %s</string>
    <string name="title_last_seens" formatted="true">Последние входы</string>
    <string name="title_access_token" formatted="true">Токены для приложения</string>

    <string name="title_dialog_edit_payment_comment">Комментарий</string>
    <string name="title_dialog_edit_payment_value">Сумма</string>

    <string name="price_format" formatted="true">%s ₽</string>
    <string name="discount_format" formatted="true">скидка: %s ₽</string>
    <string name="payment_value_format" formatted="true" translatable="false">%s / %s ₽</string>
    <string name="max_payment_value_format" formatted="true" translatable="false">/ %s ₽</string>

    <string name="app_info_text_format" formatted="true">
        <![CDATA[
        приложение <b><font color="#FF0000">CRM ЦМИТ</font></b><br/>
        версия: <b>%1$s</b><br/>
        код версии: <b>%2$d</b><br/>
        собрано: <b>%3$s</b> года в <b>%4$s</b><br/>
        ]]>
    </string>

    <string name="text_source_code">исходный код:</string>
    <string name="link_github">https://github.com/qwert2603/crmit_android</string>
    <string name="text_write_to_developer">написать разработчику:</string>
    <string name="developer_email">qwert2603@mail.ru</string>

    <string name="text_disabled">(отключен)</string>
    <string name="text_not_filled">(не заполнен)</string>
    <string name="text_search">Поиск</string>

    <string name="text_nothing_found">Ничего не найдено</string>

    <string name="student_school_format" formatted="true">%s / %s класс / %s смена</string>

    <string name="detailsField_fio">ФИО</string>
    <string name="detailsField_login">Логин</string>
    <string name="detailsField_lessonsAttendedCount">Посещено занятий</string>
    <string name="detailsField_birthDate">Дата рождения</string>
    <string name="detailsField_birthPlace">Место рождения</string>
    <string name="detailsField_registrationPlace">Регистрация</string>
    <string name="detailsField_actualAddress">Фактический адрес</string>
    <string name="detailsField_additionalInfo">Доп. инфо</string>
    <string name="detailsField_knownFrom">Узнал(а) о ЦМИТ</string>
    <string name="detailsField_school">Школа</string>
    <string name="detailsField_phone">Телефон</string>
    <string name="detailsField_contactPhone">Телефон для связи</string>
    <string name="detailsField_citizenshipName">Гражданство</string>
    <string name="detailsField_mother">Мать</string>
    <string name="detailsField_father">Отец</string>
    <string name="detailsField_groups">Группы</string>
    <string name="detailsField_group">Группа</string>
    <string name="detailsField_address">Адрес</string>
    <string name="detailsField_email">E-mail</string>
    <string name="detailsField_homePhone">Домашний телефон</string>
    <string name="detailsField_vkLink">ВКонтакте</string>
    <string name="detailsField_notificationTypesString">Уведомления</string>
    <string name="detailsField_price">Цена в месяц</string>
    <string name="detailsField_teacher">Преподаватель</string>
    <string name="detailsField_section">Секция</string>
    <string name="detailsField_startMonth">Начало функционирования</string>
    <string name="detailsField_endMonth">Окончание функционирования</string>
    <string name="detailsField_studentsCount">Кол-во учеников</string>
    <string name="detailsField_lessonsDoneCount">Проведено занятий</string>
    <string name="detailsField_systemRoleName">Системная роль</string>
    <string name="detailsField_lastSeen">Последний визит</string>
    <string name="detailsField_payments">Оплата</string>
    <string name="detailsField_paymentsInfo">Информация о платежах</string>
    <string name="detailsField_sumNotConfirmed">Сумма неподтвержденных платежей</string>
    <string name="detailsField_schedule">Расписание</string>

    <string name="text_never">Никогда</string>

    <string name="text_no_groups">Нет групп</string>
    <string name="text_no_schedule">Нет расписания</string>
    <string name="text_clear_db">Очистить ДБ</string>
    <string name="text_clear_all_and_restart">Очистить все и перезапустить</string>
    <string name="text_showing_cached_data">Показаны кешированные данные</string>

    <string name="text_back">Назад</string>
    <string name="text_forward">Далее</string>
    <string name="text_start">Начать</string>
    <string name="text_enter">Войти</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="text_logging">Выполняется вход..</string>
    <string name="text_logout_is_on">Выполняется выход..</string>

    <string name="login_error_reason_wrong_login_or_password">Неверный логин или пароль!</string>
    <string name="login_error_reason_account_disabled">Ваш аккаунт был отключен!</string>
    <string name="login_error_reason_student_account_is_not_supported">Аккаунт ученика не поддерживается</string>
    <string name="login_error_reason_bot_account_is_not_supported">Аккаунт бота не поддерживается</string>
    <string name="login_error_reason_another">Ошибка входа</string>

    <string name="text_logout">Выйти</string>

    <string name="account_type_master">Руководитель</string>
    <string name="account_type_teacher">Преподаватель</string>
    <string name="account_type_developer">Разработчик</string>
    <string name="account_type_bot">Бот</string>
    <string name="account_type_student">Ученик</string>

    <string name="date_pattern_last_seen_date">d MMMM yyyy года</string>
    <string name="date_pattern_last_seen_time">в H:mm</string>

    <string name="today_text">сегодня</string>
    <string name="yesterday_text">вчера</string>
    <string name="day_before_yesterday_text">позавчера</string>
    <string name="tomorrow_text">завтра</string>
    <string name="day_after_tomorrow_text">послезавтра</string>

    <string name="attending_state_was_not">не был</string>
    <string name="attending_state_was">был</string>
    <string name="attending_state_was_not_ill">болел</string>

    <string name="message_there_will_be_attending_changes_caching">
        В настоящее время изменения посещений НЕ кешируются.
        Все изменения посещений, которые не удалось отправить на сервер, будут потеряны при закрытии экрана.
    </string>

    <string name="message_there_will_be_payment_changes_caching">
        В настоящее время изменения платежей НЕ кешируются.
        Все изменения, которые не удалось отправить на сервер, будут потеряны при закрытии экрана.
    </string>
    <string name="text_cash">Наличные</string>
    <string name="text_confirmed">Подтверждение</string>

    <string name="text_no_comment">нет комментария</string>

    <string name="hint_comment">Комментарий</string>
    <string name="hint_value">Сумма</string>

    <string name="whats_new_title" formatted="true">Версия %s. Что нового?</string>

    <string name="whats_new_message">
        <!--todo-->
        * расписание и сумма неподтвержденных платежей в группе;\n
        * увеличена скорость работы;\n
        * небольшие улучшения;\n
    </string>

    <string name="text_expires">истекает</string>

    <string name="update_available_title">Доступно обновление</string>
    <string name="update_available_message">Новая версия приложения доступна в Play Market.</string>
    <string name="text_update">Обновить</string>

    <string name="mark_in_play_marker_message">Если Вам нравится приложение, Вы можете поддержать разработчика отличной оценкой в Play Market.</string>
    <string name="text_mark">Оценить</string>

    <string name="text_last_lessons">Последние занятия</string>
    <string name="text_your_last_lessons">Ваши последние занятия</string>

</resources>
