<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/click_FrameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="4dp">

    <FrameLayout
        android:id="@+id/backColor_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/attending_state_was"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0"
            android:text="@string/attending_state_was_not"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attending_state_was"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0"
            android:text="@string/attending_state_was_not_ill"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </FrameLayout>

</FrameLayout>