<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/greeting_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/messages_ViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.qwert2603.crmit_android.util.PointsView
            android:id="@+id/pointsView"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:padding="12dp">

            <Button
                android:id="@+id/back_Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_back"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/forward_Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_forward"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/go_Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_start"
                android:textSize="16sp"
                tools:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>