<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/studentFio_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Краснов Илья Викторович" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <include layout="@layout/include_upload_status" />

            <TextView
                android:id="@+id/value_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="500 / 1.100 ₽"
                tools:textColor="@color/payment_value_confirmed" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cash_Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:ellipsize="end"
            android:lines="1"
            android:padding="12dp"
            android:text="@string/text_cash" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/confirmed_Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:ellipsize="end"
            android:lines="1"
            android:padding="12dp"
            android:text="@string/text_confirmed"
            tools:checked="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/comment_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        tools:text="@string/text_no_comment"
        tools:textStyle="italic" />

</LinearLayout>